--- a/ftp-server/Properties/Resources.resx
+++ b/ftp-server/Properties/Resources.resx
@@ -117,4 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icon_ftp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon_ftp.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_ftp_active1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon_ftp_active1.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_ftp_active2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon_ftp_active2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_ftp_idle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon_ftp_idle.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
